# poissonEquation-C

./: .gitignore  CMakeLists.txt  README.md
UI/include/: mainwindow.h  mainwindow.hpp
UI/include/Forms/: mainwindow.ui
UI/src/: mainwindow.cpp
engine/include/: linearSolvers.h  matrix.h  matrix.hpp  model.h  plotContour.h  plotContour.hpp
engine/src/: assembleGlobalMatrix.cpp  linearSolvers.cpp  main.cpp  model.cpp  plotContour.cpp
include/: linearSolvers.hpp  matrix.hpp  plotContour.hpp
src/: linearSolvers.cpp  main.cpp  plotContour.cpp  poissonEquation.cpp
